--- a/src/component/home.css
+++ b/src/component/home.css
@@ -1,9 +1,28 @@
 body {
-    background-color: #1c64c3;
-    padding: 1%;
+    background-color: #98EFFE;
+    padding-top: 3%;
+    
+}
+#border{
+    border: 10px solid ;
+    border-color: #374151;
+    width: 50%;
+    height: 100%;
 }
 #logo_home{
-    height: 300px;
-    width: 25%;
-    allign itemsizing content: center;
+    height: 10%;
+    width: 10%;
+    align-items: center;
+    padding-top: 3%;
+}
+#HeadingGMH{
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: underline;
+    font-size: 45px;
+    font-weight: bold;
+    color:#374151;
+    padding-top: 1%;
+}
+#login{
+    
 }
