--- a/src/component/home.css
+++ b/src/component/home.css
@@ -20,9 +20,27 @@ body {
     text-decoration: underline;
     font-size: 45px;
     font-weight: bold;
-    color:#374151;
+    color:#513737;
     padding-top: 1%;
 }
 #login{
-    
+    width: 58%;
+    margin-top: 5%;
+}
+
+#block{
+    margin-bottom: 2%;
+}
+
+#block > input{
+
+    font-size: 20px;
+}
+
+#login > button{
+    margin-top: 5%;
+    width: 27%;
+    font-size: 20px;
+    background-color:#374151;
+    border: none;
 }
