--- a/src/component/home.css
+++ b/src/component/home.css
@@ -1,5 +1,7 @@
 body {
-    background-color: #98EFFE;
+    background-image: url("https://i.ibb.co/FJFhf3T/v870-tang-36.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
     
 }
 #border{
