--- a/src/component/home.css
+++ b/src/component/home.css
@@ -17,7 +17,7 @@ body {
     padding-top: 3%;
 }
 #HeadingGMH{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; ;
     text-decoration: underline;
     font-size: 45px;
     font-weight: bold;
