--- a/src/component/recep.css
+++ b/src/component/recep.css
@@ -2,7 +2,7 @@
   height: 100%; /* Full-height: remove this if you want "auto" height */
   width: 15%; /* Set the width of the sidebar */
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  z-index: 1; /* Stay on top */
+  
   top: 0; /* Stay at the top */
   left: 0;
   background-color: #000000; /* Black */
@@ -63,12 +63,14 @@ margin-right: auto;
   background-color: #000000;
   font-size:30px;
   color: rgb(124, 124, 124);
+  z-index: 1;
+  position: fixed; 
 }
 
 .head img{
   width: 4%;
   height: 70%;
-  margin-left: 17%;
+  margin-left: 1%;
   margin-top: 0.3%;
   margin-right:1.2%;
 }
@@ -79,4 +81,9 @@ margin-right: auto;
   font-size: 18px;
   margin-right: 10px;
   margin-top:6px;
+}
+body{
+  background-image: url("https://i.ibb.co/V3PfjV7/v870-tang-36inv.png");
+  background-repeat: no-repeat;
+    background-size: cover;
 }
