--- a/src/component/home.css
+++ b/src/component/home.css
@@ -48,4 +48,6 @@ body {
     background-image: url("https://i.ibb.co/FJFhf3T/v870-tang-36.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    height: 100vh;
+    
 }
