--- a/src/component/recep.css
+++ b/src/component/recep.css
@@ -64,7 +64,8 @@ margin-right: auto;
   font-size:30px;
   color: rgb(124, 124, 124);
   z-index: 1;
-  position: fixed; 
+  position: fixed;
+  margin-top: 0%;
 }
 
 .head img{
