--- a/src/component/add_patient.css
+++ b/src/component/add_patient.css
@@ -22,20 +22,20 @@ body{
 }
 .container{
     position: relative;
-    max-width: 900px;
-    width: 100%;
+    max-width: 950px;
+    width: 110%;
     border-radius: 6px;
     /* padding: ; */
     margin: 1% ;
-    background-color: #445962;
-    box-shadow: 0 5px 10px rgba(0,0,0,0.1);
-    padding: 10px;
+    background-color: #4599A5;
+    box-shadow: 0 5px 10px rgba(17, 17, 17, 0.897);
+    padding: 50px;
     border-radius: 25px;
     height:auto;
 }
 .container header{
     position: relative;
-    font-size: 20px;
+    font-size: 28px;
     font-weight: 600;
     color: #DBF0eC;
     
@@ -54,13 +54,13 @@ body{
     position: relative;
     margin-top: 16px;
     min-height: 420px;
-    background-color: #445962;
+    background-color: #4599A5;
     overflow: hidden;
     
 }
 .container form .form{
     position: absolute;
-    background-color: #445962;
+    background-color: #4599A5;
     transition: 0.3s ease;
 }
 .container form .form.second{
@@ -81,10 +81,13 @@ form.secActive .form.first{
 .container form .title{
     display: block;
     margin-bottom: 8px;
-    font-size: 20px;
-    font-weight: 500;
+    font-size: 24px;
+    font-weight: 1000;
     margin: 6px 0;
-    color: #67D3CB;
+    color: #323D47;
+    font-weight: bold;
+    text-decoration: underline;
+    
     
 }
 .container form .fields{
@@ -100,7 +103,7 @@ form .fields .input-field{
     margin: 4px 0;
 }
 .input-field label{
-    font-size: 12px;
+    font-size: 16px;
     font-weight: 500;
     color: white;
 }
@@ -108,12 +111,13 @@ form .fields .input-field{
     outline: none;
     font-size: 14px;
     font-weight: 400;
-    color: #333;
+    color: #323D47;
     border-radius: 5px;
     border: 1px solid #aaa;
     padding: 0 15px;
     height: 42px;
     margin: 8px 0;
+    width:200px;
 }
 .input-field input :focus,
 .input-field select:focus{
@@ -132,22 +136,23 @@ form .fields .input-field{
     justify-content: center;
     height: 45px;
     max-width: 200px;
-    width: 100%;
+    width: 120px;
     border: none;
     outline: none;
     color: #fff;
-    border-radius: 5px;
-    margin: 25px 0;
-    background-color: #4070f4;
+    border-radius: 6px;
+    margin: 25px 5px;
+    background-color: #323D47;
     transition: all 0.3s linear;
     cursor: pointer;
 }
 .container form .btnText{
-    font-size: 14px;
-    font-weight: 400;
+    font-size: 16px;
+    font-weight: 700;
+    
 }
 form button:hover{
-    background-color: #265df2;
+    background-color: #445962;
 }
 form button i,
 form .backBtn i{
