--- a/src/component/recep.css
+++ b/src/component/recep.css
@@ -1,13 +1,13 @@
 .sidenav {
-  height: 100%; /* Full-height: remove this if you want "auto" height */
+  height: 100%;/* Full-height: remove this if you want "auto" height */
   width: 20%; /* Set the width of the sidebar */
-  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  
-  top: 0; /* Stay at the top */
+ /* Fixed Sidebar (stay in place on scroll) */
+  float:left;
+  top: 0;
   left: 0;
   background-color: #323D47; /* Black */
   overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
+  position:fixed;
 }
 
 /* The navigation menu links */
