--- a/src/component/tracker.css
+++ b/src/component/tracker.css
@@ -13,6 +13,7 @@
     font-weight: bold;
     font-size: 50px;
     text-decoration: underline;
+    text-align: center;
 }
 
 
@@ -25,15 +26,15 @@
     border-radius: 40px;
     padding: 5px;
     padding-left: 25px;
-    width: 33%;
-    margin-left: 27%;
+    width: 55%;
+    margin-left: 32%;
     box-shadow: 0 0 8px rgba(0, 0, 0,);
 
         
 }
 .search-box:hover > .search-txt{
     width: 240px;
-    padding: 0 6px;
+    padding: 1% 15px;
     top: 10px;
     color: #000000;
 }
@@ -41,33 +42,35 @@
 .search-btn{
     color: #DBF0EC;
     float: right;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    border-radius: 40px;
     background: #323D47;
     display: flex;
     justify-content: center;
     align-items: center;
     transition: 0.4s;
     text-decoration:solid;
+    padding: 3%;
+    margin-right: 0.5%;
 }
 .search-txt{
  border: none;
  background: none;
  outline: none;
  float: left;
- padding: 0;
- font-size: 16px;
+ padding: 1%;
+ font-size: 20px;
  transition: 0.4s;   
  line-height: 40px;
  width: 40%;
 }
 #showpat{
     border-radius: 20px;
-    margin-left: 25%;
+    margin-left: 32%;
     margin-top: 4%;
     height:270px;
-    width: 60%;
+    width: 55%;
     background-color: rgb(3, 140, 135);
 
 }
