--- a/src/component/viewHis.css
+++ b/src/component/viewHis.css
@@ -1,2 +1,18 @@
-
+#showpat2
+{
+    border-radius: 20px;
+    margin-left: 32%;
+    margin-top: 4%;
+    height:430px;
+    width: 55%;
+    background-color: rgb(3, 140, 135);
+}
+#paticonbox2
+{
+    height: 250px;
+    width: 40%;
+    float: left;
+    padding: 4%;
+    border-radius:50px;
+}
 
