--- a/src/component/home.css
+++ b/src/component/home.css
@@ -10,10 +10,10 @@ body {
     height: 100%;
 }
 #logo_home{
-    height: 25%;
-    width: 10%;
+    height: 20%;
+    width: 13%;
     align-items: center;
-    padding-top: 3%;
+    padding-top: 6%;
 }
 #HeadingGMH{
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; ;
@@ -42,6 +42,7 @@ body {
     width: fit-content;
     font-size: 20px;
     background-color:#445962;
+    border:none;
     
 }
 
