--- a/src/component/viewHis.css
+++ b/src/component/viewHis.css
@@ -7,6 +7,9 @@
     width: 55%;
     background-color: rgb(3, 140, 135);
 }
+
+
+
 #paticonbox2
 {
     height: 250px;
@@ -15,4 +18,6 @@
     padding: 4%;
     border-radius:50px;
 }
-
+#patientinfobox2{
+    width: 100%;
+}
